# rust-album-art

./: Cargo.toml
.github/workflows/: test.yml
src/: args.rs  cli.rs  client.rs  main.rs  model.rs  results.rs
