[package]
name = "art"
version = "0.1.0"
edition = "2021"
description = "CLI utility to download art from the iTunes API"

[dependencies]
anyhow = "1.0.69"
bson = { version = "2.6.0", features = ["serde_with", "chrono-0_4"] }
chrono = "0.4.24"
clap = { version = "4.1.8", features = ["cargo", "derive"] }
colored = "2.0.0"
reqwest = "0.11.14"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
